fix: make active event ordering button more visible

--- a/src/pages/events/index.module.css
+++ b/src/pages/events/index.module.css
@@ -175,7 +175,7 @@ html[data-theme='dark']
 .selectedButton {
   /* color: var(--ifm-color-primary) !important; */
   background-color: var(--ifm-color-secondary-dark);
-  filter: brightness(95%);
+  filter: brightness(65%);
 }
 .dropdown li:nth-child(odd) > button{
   border-radius: var(--ifm-button-border-radius) 0% 0% var(--ifm-button-border-radius);  
@@ -185,7 +185,7 @@ html[data-theme='dark']
   border-radius: 0% var(--ifm-button-border-radius) var(--ifm-button-border-radius)  0%;
 }
 .dropdown button:hover:not(.selectedButton){
-  filter: brightness(85%);
+  filter: brightness(80%);
 }
 
 .searchBar {
